# p-engine

./: .env_template  .gitignore  CHANGELOG.md  README.md  audit_log_model.txt  bulk_data.json  docker-compose.yml  generate_embeddings.py  plan3.md  plan5_FE.md  pyproject.toml  seed.sh  test_data.json
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: LogList.tsx  SearchBar.tsx
p-engine/: __init__.py  dependencies.py  main.py  models.py
p-engine/config/: __init__.py  settings.py
p-engine/controllers/: __init__.py  items.py  search.py
p-engine/models/: __init__.py  schemas.py
p-engine/p_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
p-engine/schemas/: item.schema.json
p-engine/services/: __init__.py  embedding_service.py  search_service.py
p_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plans/: plan.md  plan2.md  plan4_accurate_hybrid_search.md  plan5_FE.md
